CREATE SCHEMA "seguridad";

CREATE SCHEMA "catalogo";

CREATE SCHEMA "core";

CREATE TABLE "seguridad"."usuarios" (
  "id_usuario" integer PRIMARY KEY,
  "correo_inicio_sesion" varchar UNIQUE NOT NULL,
  "contrasenia" varchar NOT NULL,
  "eliminado" boolean,
  "estado" char NOT NULL,
  "ultimo_inicio_sesion" timestamp,
  "fecha_creacion" timestamp DEFAULT (now()),
  "metadata" json
);

CREATE TABLE "seguridad"."usuarios_contacto" (
  "id_contacto" integer PRIMARY KEY,
  "id_usuario" integer NOT NULL,
  "tipo_contacto" integer,
  "valor" varchar NOT NULL,
  "principal" boolean,
  "verificado" boolean
);

CREATE TABLE "seguridad"."usuarios_perfil" (
  "id_perfil" integer PRIMARY KEY,
  "id_usuario" integer NOT NULL,
  "nombres" varchar NOT NULL,
  "apellidos" varchar NOT NULL,
  "dui" varchar UNIQUE,
  "genero" char(1),
  "fecha_nacimiento" date
);

CREATE TABLE "seguridad"."usuarios_direccion" (
  "id_direccion" integer PRIMARY KEY,
  "id_usuario" integer NOT NULL,
  "id_municipio" integer NOT NULL,
  "direccion_linea_1" varchar NOT NULL,
  "codigo_postal" int,
  "tipo_direccion" char,
  "fecha_creacion" timestamp DEFAULT (now()),
  "metadata" json
);

CREATE TABLE "catalogo"."paises" (
  "id_pais" integer PRIMARY KEY,
  "nombre_pais" varchar NOT NULL
);

CREATE TABLE "catalogo"."departamentos" (
  "id_departamento" integer PRIMARY KEY,
  "id_pais" integer NOT NULL,
  "nombre_departamento" varchar NOT NULL
);

CREATE TABLE "catalogo"."municipios" (
  "id_municipio" integer PRIMARY KEY,
  "id_departamento" integer NOT NULL,
  "nombre_municipio" varchar NOT NULL
);

CREATE TABLE "catalogo"."marcas" (
  "id_marca" integer PRIMARY KEY,
  "nombre_marca" varchar NOT NULL,
  "fecha_creacion" timestamp DEFAULT (now())
);

CREATE TABLE "core"."categorias" (
  "id_categoria" integer PRIMARY KEY,
  "id_categoria_padre" integer,
  "nombre_categoria" varchar NOT NULL,
  "descripccion" varchar,
  "fecha_creacion" timestamp DEFAULT (now())
);

CREATE TABLE "core"."productos" (
  "id_producto" integer PRIMARY KEY,
  "id_categoria" integer NOT NULL,
  "id_marca" integer NOT NULL,
  "nombre_producto" varchar NOT NULL,
  "descripcion_producto" varchar NOT NULL,
  "stock_disponible" integer DEFAULT 0,
  "stock_minimo" integer DEFAULT 0,
  "estado" char DEFAULT 'A',
  "fecha_creacion" timestamp DEFAULT (now()),
  "metadata" jsonb
);

CREATE TABLE "core"."pedidos" (
  "id_pedido" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_usuario" integer NOT NULL,
  "id_direccion" integer NOT NULL,
  "estado_pedido" varchar NOT NULL DEFAULT 'PENDIENTE',
  "total" numeric(10,2) NOT NULL,
  "fecha_creacion" timestamptz DEFAULT (now())
);

CREATE TABLE "core"."detalles_pedido" (
  "id_detalle" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_pedido" integer NOT NULL,
  "id_producto" integer NOT NULL,
  "cantidad" integer NOT NULL,
  "precio_unitario" numeric(10,2) NOT NULL,
  "subtotal" numeric(10,2) NOT NULL
);

CREATE TABLE "core"."pagos" (
  "id_pago" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_pedido" integer UNIQUE NOT NULL,
  "metodo_pago" varchar NOT NULL,
  "monto" numeric(10,2) NOT NULL,
  "estado_transaccion" varchar NOT NULL DEFAULT 'PROCESANDO',
  "fecha_pago" timestamptz DEFAULT (now())
);

CREATE TABLE "core"."envios" (
  "id_envio" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_pedido" integer UNIQUE NOT NULL,
  "empresa_transporte" varchar,
  "numero_seguimiento" varchar,
  "estado_envio" varchar NOT NULL DEFAULT 'PREPARANDO',
  "fecha_despacho" timestamptz,
  "fecha_entrega" timestamptz
);

CREATE TABLE "core"."movimientos_inventario" (
  "id_movimiento" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_producto" integer NOT NULL,
  "tipo_movimiento" varchar NOT NULL,
  "cantidad" integer NOT NULL,
  "motivo" varchar NOT NULL,
  "fecha_movimiento" timestamptz DEFAULT (now()),
  "id_pedido" integer
);

COMMENT ON COLUMN "seguridad"."usuarios_contacto"."valor" IS 'Numero o Correo';

COMMENT ON COLUMN "seguridad"."usuarios_perfil"."dui" IS 'Documento Unico de Identidad';

COMMENT ON COLUMN "core"."categorias"."id_categoria_padre" IS 'Si es NULL, es categoría principal';

COMMENT ON COLUMN "core"."pedidos"."estado_pedido" IS 'PENDIENTE, PAGADO, ENVIADO, ENTREGADO, CANCELADO';

COMMENT ON COLUMN "core"."detalles_pedido"."subtotal" IS 'cantidad * precio_unitario';

COMMENT ON COLUMN "core"."pagos"."metodo_pago" IS 'TARJETA_CREDITO, PAYPAL, TRANSFERENCIA';

COMMENT ON COLUMN "core"."pagos"."estado_transaccion" IS 'PROCESANDO, APROBADO, RECHAZADO';

COMMENT ON COLUMN "core"."envios"."estado_envio" IS 'PREPARANDO, EN_TRANSITO, ENTREGADO';

COMMENT ON COLUMN "core"."movimientos_inventario"."tipo_movimiento" IS 'ENTRADA, SALIDA';

COMMENT ON COLUMN "core"."movimientos_inventario"."motivo" IS 'COMPRA_PROVEEDOR, VENTA, AJUSTE, DEVOLUCION';

COMMENT ON COLUMN "core"."movimientos_inventario"."id_pedido" IS 'Opcional, vincula la salida de stock con una venta específica';

ALTER TABLE "seguridad"."usuarios_contacto" ADD FOREIGN KEY ("id_usuario") REFERENCES "seguridad"."usuarios" ("id_usuario") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "seguridad"."usuarios_perfil" ADD FOREIGN KEY ("id_usuario") REFERENCES "seguridad"."usuarios" ("id_usuario") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "catalogo"."departamentos" ADD FOREIGN KEY ("id_pais") REFERENCES "catalogo"."paises" ("id_pais") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "catalogo"."municipios" ADD FOREIGN KEY ("id_departamento") REFERENCES "catalogo"."departamentos" ("id_departamento") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "seguridad"."usuarios_direccion" ADD FOREIGN KEY ("id_usuario") REFERENCES "seguridad"."usuarios" ("id_usuario") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "seguridad"."usuarios_direccion" ADD FOREIGN KEY ("id_municipio") REFERENCES "catalogo"."municipios" ("id_municipio") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "core"."categorias" ADD FOREIGN KEY ("id_categoria_padre") REFERENCES "core"."categorias" ("id_categoria") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "core"."productos" ADD FOREIGN KEY ("id_categoria") REFERENCES "core"."categorias" ("id_categoria") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "core"."productos" ADD FOREIGN KEY ("id_marca") REFERENCES "catalogo"."marcas" ("id_marca") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "core"."pedidos" ADD FOREIGN KEY ("id_usuario") REFERENCES "seguridad"."usuarios" ("id_usuario") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "core"."pedidos" ADD FOREIGN KEY ("id_direccion") REFERENCES "seguridad"."usuarios_direccion" ("id_direccion") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "core"."detalles_pedido" ADD FOREIGN KEY ("id_pedido") REFERENCES "core"."pedidos" ("id_pedido") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "core"."detalles_pedido" ADD FOREIGN KEY ("id_producto") REFERENCES "core"."productos" ("id_producto") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "core"."pagos" ADD FOREIGN KEY ("id_pedido") REFERENCES "core"."pedidos" ("id_pedido") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "core"."envios" ADD FOREIGN KEY ("id_pedido") REFERENCES "core"."pedidos" ("id_pedido") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "core"."movimientos_inventario" ADD FOREIGN KEY ("id_producto") REFERENCES "core"."productos" ("id_producto") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "core"."movimientos_inventario" ADD FOREIGN KEY ("id_pedido") REFERENCES "core"."pedidos" ("id_pedido") DEFERRABLE INITIALLY IMMEDIATE;
